--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
+0.8.1
+	Support re-enabled for HTK extended filenames.
+	DecodingHMM and some other files removed
+	Pure virtual interface for models
+
 0.8.0
 	Feature mechanism changed to use tracter.
 	SWIG interface to Java
+
 0.6.1
 	This release is just cosmetic changes to the build environment:
 	o Move src/index.h to doc/index.doc
