--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+1.0
+	Use shorter version number
+	Add JNI finder in CMake
+	Suppress cmd.log file
+	Fixes for threaded decoder from Le Zhang
+	Transducer loading bug-fix
+	Default to static libraries
+
+0.12.1
+	Fix the default backoff problem in the WFST generation
+
+0.12.0
+	Update for component commit in tracter
+	CMake build system
+
 0.11.0
 	After the RT09 evaluations
 	o Faster WFSTDecoderLite core
